--- a/inline/inline.css
+++ b/inline/inline.css
@@ -1,15 +1,15 @@
 :root {
-  --background: #888888;
+  --background: lightgrey;
   --container: #ffffff;
   --block: #ffffff;
   --inline: #ffe8df;
-  --screen-width: #ff165d;
-  --child1: #3ec1d3;
-  --child2: #81b214;
-  --child3: #8fd9a8;
-  --child4: #81b214;
-  --child5: #51c4d3;
-  --child6: #8fd9a8;
+  --screen-width: #87cdd4;
+  --child1: #4fa8f9;
+  --child2: #ec5e57;
+  --child3: #b36ce1;
+  --child4: #70bf41;
+  --child5: #f59019;
+  --child6: #f6d32a;
   --border: black;
 }
 
