--- a/inline/inline.css
+++ b/inline/inline.css
@@ -1,18 +1,3 @@
-:root {
-  --background: lightgrey;
-  --container: #ffffff;
-  --block: #ffffff;
-  --inline: #ffe8df;
-  --screen-width: #87cdd4;
-  --child1: #4fa8f9;
-  --child2: #ec5e57;
-  --child3: #b36ce1;
-  --child4: #70bf41;
-  --child5: #f59019;
-  --child6: #f6d32a;
-  --border: black;
-}
-
 h1 {
   color: white;
   margin-bottom: 2.5rem;
@@ -166,4 +151,20 @@ li {
 .screen-width .block-elements:nth-child(4) {
   background-color: var(--child6);
   font-size: 1rem;
+}
+
+button {
+  display: flex;
+  padding: 0.5rem;
+  margin: 0 auto 1rem;
+  background-color: var(--screen-width);
+  border: none;
+  border-radius: 1rem;
+  color: white;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: var(--button-hover);
+  transition: 200ms;
 }
