--- a/inline/inline.css
+++ b/inline/inline.css
@@ -153,7 +153,10 @@ li {
   font-size: 1rem;
 }
 
-button {
+.button {
+  width: 7.7rem;
+  text-align: center;
+  text-decoration: none;
   display: flex;
   padding: 0.5rem;
   margin: 0 auto 1rem;
@@ -164,7 +167,7 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   background-color: var(--button-hover);
   transition: 200ms;
 }
