--- a/inline/different.css
+++ b/inline/different.css
@@ -3,12 +3,13 @@
   --container: #ffffff;
   --block: #ffffff;
   --inline: #ffe8df;
-  --screen-width: #87cdd4;
-  --child1: #4fa8f9;
-  --child2: #ec5e57;
-  --child3: #b36ce1;
-  --child4: #70bf41;
-  --child5: #f59019;
-  --child6: #f6d32a;
+  --screen-width: #00ebc7;
+  --child1: #ff5470;
+  --child2: #fde24f;
+  --child3: #3da9fc;
+  --child4: #3da9fc;
+  --child5: #994ff3;
+  --child6: #ff5470;
   --border: black;
+  --button-hover: #87cdf0;
 }
